fix all tests